@@ -1,3 +1,9 @@
+2005-05-18  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* viewmodel.cpp make_mesh.cpp/h model.cpp/h modelrender*.shader
+	  - some shader improvements
+	  - better modelview
+	  - mesh creation helper functions for testing added
+
 2005-05-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* texture.cpp/h and clients
 	  - new mapping/clamping interface for texture class
